--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,22 @@
 version: '3'
 services:
-    oidc-server-mock:
-      container_name: oidc
-      image: jboss/keycloak
-      ports:
-        - "8080:8080"
-      environment:
-        KEYCLOAK_USER: kcadmin
-        KEYCLOAK_PASSWORD: admin
+  oidc-server-mock:
+    container_name: oidc
+    image: jboss/keycloak
+    ports:
+      - "8080:8080"
+    environment:
+      KEYCLOAK_USER: kcadmin
+      KEYCLOAK_PASSWORD: admin
+  opa:
+    image: openpolicyagent/opa:latest
+    ports:
+      - 8181:8181
+    # TODO - have an authorization policy for OPA
+    volumes:
+      - ./permissions_engine/permissions.rego:/policy.rego
+    command:
+      - "run"
+      - "--server"
+      - "--log-level=debug"
+      - "/policy.rego"
